--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "css/style.css]
     path= css/style.css
-    url = git://github.com/Btallan/PortfolioWebsite.git
+    url = git://git@github.com:Btallan/PortfolioWebsite.git
